@@ -1,3 +1,15 @@
+2019-10-03  Sihui Liu  <sihui_liu@apple.com>
+
+        IndexedDB: add size estimate for key path when estimate task size
+        https://bugs.webkit.org/show_bug.cgi?id=202480
+
+        Reviewed by Geoffrey Garen.
+
+        No observable behavior change.
+
+        * Modules/indexeddb/server/UniqueIDBDatabase.cpp:
+        (WebCore::IDBServer::estimateSize):
+
 2019-10-03  youenn fablet  <youenn@apple.com>
 
         Regression: iOS 13.1 MediaStreamTrack.enabled = false kills audio track
